[package]
name = "reth-indexer-mongo"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.5.4", features = ["full"] }
eyre = "0.6.12"
reth_db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db" }
reth_chainspec = { git = "https://github.com/paradigmxyz/reth", package = "reth-chainspec" }
reth_node_ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum" }
reth_node_types = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-types" }
reth_primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
reth_provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" }
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
mongodb = "3.1.0"
indicatif = "0.17.8"
